# nfckeyboard

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md
packaging/pyinstaller/: linux.spec  win32.spec
scripts/: svg2ico.py
src/nfckeyboard/: __main__.py
tests/: test_smoke.py
